--- a/application/modules/admin/views/scripts/calendario/cadastrar-calendario.phtml
+++ b/application/modules/admin/views/scripts/calendario/cadastrar-calendario.phtml
@@ -65,12 +65,12 @@
                                         </select>
                                 </div>
                             </div>
-                            <div class="control-group">
+                       <!--     <div class="control-group">
                                 <label for="inputEmail" class="control-label">Descrição Rodapé:</label>
                                 <div class="controls">
                                     <textarea rows="3" style="width: 210px;"></textarea>
                                 </div>
-                            </div>
+                            </div>  -->
                         </div>
                         <div class="rows-fluid">
                             <div class="span12">
