--- a/application/modules/admin/views/scripts/campanha/alterar-campanha.phtml
+++ b/application/modules/admin/views/scripts/campanha/alterar-campanha.phtml
@@ -1,4 +1,10 @@
 <script type="text/javascript" src="/admin/js/pessoa.js"></script>
+<ul class="pager offset10">
+    <li class="previous">
+        <a href="/admin/campanha/consulta-campanha"><i class="icon-arrow-left"></i><strong>Voltar</strong></a>
+    </li>
+
+</ul>
 <fieldset>
     <legend>Cadastrar Campanhas</legend>
     <?php
@@ -51,7 +57,7 @@
                                     <div class="form-actions">
                                         <div class="control-group">
                                             <button class="btn btn-primary" type="submit">Salvar</button>
-                                            <button class="btn btn-primary" type="reset">Limpar</button>
+                                            <a href="/admin/campanha/consulta-campanha" class="btn btn-primary">Cancelar</a>
                                         </div>
                                     </div>
                                 </div>
