--- a/application/modules/admin/views/scripts/campanha/consulta-campanha.phtml
+++ b/application/modules/admin/views/scripts/campanha/consulta-campanha.phtml
@@ -5,7 +5,7 @@
 
     <form class="form-inline" method="post" action="">
         <select name="tipoConsulta">
-            <option value="">Selecione a opção</option>
+            <option value="">--</option>
             <option value="nome">Nome da Campanha</option>
             <option value="nome">Data Inicial</option>
             <option value="nome">Data Final</option>
