--- a/application/modules/admin/views/scripts/cartao/consulta-cartao.phtml
+++ b/application/modules/admin/views/scripts/cartao/consulta-cartao.phtml
@@ -8,7 +8,7 @@
 
     <form class="form-inline" method="post" action="">
         <select name="tipoConsulta">
-            <option value="">Selecione a opção</option>
+            <option value="">--</option>
             <option value="nome">Nome</option>
             <option value="nome_mae">Nome da mãe</option>
             <option value="dt_nasc">Data de Nascimento (DD/MM/AAAA)</option>
