--- a/application/modules/admin/views/scripts/mensagem/enviar-mensagem.phtml
+++ b/application/modules/admin/views/scripts/mensagem/enviar-mensagem.phtml
@@ -23,7 +23,7 @@
 <div class="rows-fluid ">
                         <div class="span10">
                             <select name="tipoConsulta">
-                                <option value="">Selecione a opção</option>
+                                <option value="">--</option>
                                 <option value="nome">Nome do Paciente</option>
                                 <option value="nome">Registro de Nascimento</option>
                                 <option value="nome">RG</option>
