--- a/application/modules/admin/views/scripts/pessoa/consulta-funcionario.phtml
+++ b/application/modules/admin/views/scripts/pessoa/consulta-funcionario.phtml
@@ -9,7 +9,7 @@ echo $this->flashMessenger();
 
     <form class="form-inline" method="post" action="">
         <select name="tipoConsulta" id="tipoConsulta">
-            <option value="">Selecione a opção</option>
+            <option value="">--</option>
             <option value="nome">Nome</option>
             <option value="matricula">Matricula</option>
             <option value="cod_sit">Situação do Cadastro</option>
@@ -60,7 +60,7 @@ echo $this->flashMessenger();
                                 <a href="/admin/pessoa/visualisar-cadastro/cod_pessoa/<?php echo $funcionarios->cod_pessoa ?>" title="Detelhar cadastro" class="btn btn-warning btn btn-mini"><i class="icon-eye-open icon-white"></i></a>
                                 <?php if (Zend_Auth::getInstance()->getIdentity()->cod_perfil <= Simova_Constantes::ADMINISTRADOR): ?>
                                     <a href="/admin/pessoa/editar-funcionario/cod_pessoa/<?php echo $funcionarios->cod_pessoa ?>" title="Alterar cadastro" class="btn btn-primary btn btn-mini"><i class="icon-edit icon-white"></i></a>
-                                    <a href="/admin/pessoa/excluir-funcionario/cod_pessoa/<?php echo $funcionarios->cod_pessoa ?>" title="Excluir" class="btn btn-danger btn btn-mini confirm"><i class="icon-trash icon-white"></i></a>&nbsp;
+                                    <a href="/admin/pessoa/excluir-funcionario/cod_pessoa/<?php echo $funcionarios->cod_pessoa ?>" title="Excluir cadastro" class="btn btn-danger btn btn-mini confirm"><i class="icon-trash icon-white"></i></a>&nbsp;
                                 <?php endif; ?>
                             <?php else: ?>
                                 <a href="/admin/pessoa/restaurar-funcionario/cod_pessoa/<?php echo $funcionarios->cod_pessoa ?>" title="Restaurar cadastro" class="btn btn btn-mini"><i class="icon-check"></i></a>&nbsp;
