--- a/application/modules/admin/views/scripts/pessoa/cadastro-funcionario.phtml
+++ b/application/modules/admin/views/scripts/pessoa/cadastro-funcionario.phtml
@@ -68,7 +68,7 @@
                                 </div>
                             </div>
                             <div class="control-group">
-                                <label for="inputEmail" class="control-label">Estado Civil:</label>
+                                <label for="inputEmail" class="control-label"><b>*</b>Estado Civil:</label>
                                 <div class="controls">
                                     <?php echo $this->form->cod_estado_civil ?>
                                 </div>
