--- a/application/modules/admin/views/scripts/pessoa/cadastro-paciente.phtml
+++ b/application/modules/admin/views/scripts/pessoa/cadastro-paciente.phtml
@@ -62,7 +62,7 @@
                                 </div>
                             </div>
                             <div class="control-group">
-                                <label for="inputEmail" class="control-label">Estado Civil:</label>
+                                <label for="inputEmail" class="control-label"><b>*</b>Estado Civil:</label>
                                 <div class="controls">
                                     <?php echo $this->form->cod_estado_civil ?>
                                 </div>
@@ -186,12 +186,12 @@
                                     <?php echo $this->form->cod_un_saude ?>
                                 </div>
                             </div>
-<!--                            <div class="control-group">
+                            <div class="control-group hidden">
                                 <label for="inputEmail" class="control-label"><b>*</b> Perfil:</label>
                                 <div class="controls">
-                                    <?php //echo $this->form->cod_perfil ?>
+                                    <?php echo $this->form->cod_perfil ?>
                                 </div>
-                            </div>-->
+                            </div>
                         </div>
                         <div class="span6">
                             <div class="control-group">
