--- a/application/modules/admin/views/scripts/pessoa/editar-paciente.phtml
+++ b/application/modules/admin/views/scripts/pessoa/editar-paciente.phtml
@@ -194,7 +194,7 @@
                                     <?php echo $this->form->cod_un_saude ?>
                                 </div>
                             </div>
-                            <div class="control-group">
+                            <div class="control-group hidden">
                                 <label for="inputEmail" class="control-label"><b>*</b> Perfil:</label>
                                 <div class="controls">
                                     <?php echo $this->form->cod_perfil ?>
