--- a/application/modules/admin/layout/layout.phtml
+++ b/application/modules/admin/layout/layout.phtml
@@ -458,8 +458,10 @@
                 <!-- span side-right -->
                 <div class="span2">
                     <!-- side-right -->
+                    
                     <aside class="side-right">
                         <!-- sidebar-right -->
+                        
                         <div class="sidebar-right">
                             <!--sidebar-right-header-->
                             <div class="sidebar-right-header">
@@ -483,6 +485,7 @@
                             <div class="sidebar-right-content">
                                 <div class="tab-content">
 
+                                   
                                     <!--chat-->
                                     <div class="tab-pane fade" id="chat">
                                         <div class="side-chat">
@@ -491,42 +494,21 @@
                                                 <div class="chat-action">
                                                     <div class="btn-group pull-right">
                                                         <!--we use data toggle tab for navigate this action-->
-                                                        <a class="bg-transparent no-border" href="#contact" data-toggle="tab" title="minimize"><i class="icofont-minus"></i></a>
+                                                        <a class="bg-transparent no-border" href="#contact" data-toggle="tab" title="minimizar"><i class="icofont-minus"></i></a>
                                                         <a class="bg-transparent no-border" title="pop out"><i class="icofont-resize-full"></i></a>
-                                                        <a class="bg-transparent no-border" href="#contact" data-toggle="tab" title="close"><i class="icofont-remove-sign"></i></a>
+                                                        <a class="bg-transparent no-border" href="#contact" data-toggle="tab" title="fechar"><i class="icofont-remove-sign"></i></a>
                                                     </div>
                                                 </div>
-                                                <h5><i class="icofont-certificate color-green"></i> Jane smith</h5>
+                                                <h5><i class="icofont-certificate color-green"></i> <?php echo $identity->nome ?></h5>
                                             </div>
                                             <!--content part-->
-                                            <div class="chat-content">
-                                                <div class="chat-in">
-                                                    <span class="chat-time">10:45am</span>
-                                                    <strong class="chat-user">Jane smith: </strong>
-                                                    <div class="chat-text">Lorem ipsum dolor</div>
-                                                </div>
-                                                <div class="chat-out">
-                                                    <span class="chat-time">10:47am</span>
-                                                    <strong class="chat-user">me: </strong>
-                                                    <div class="chat-text">Erat duis lectus vel wisi, quibusdam aliquam vehicula eleifend ut</div>
-                                                </div>
-                                                <div class="chat-in">
-                                                    <span class="chat-time">10:50am</span>
-                                                    <strong class="chat-user">Jane smith: </strong>
-                                                    <div class="chat-text">Et sagittis ut vel dolor nullam proin</div>
-                                                </div>
-                                                <div class="chat-out">
-                                                    <span class="chat-time">10:52am</span>
-                                                    <strong class="chat-user">me: </strong>
-                                                    <div class="chat-text">massa massa quisque sodales id dictumst.</div>
-                                                </div>
-                                            </div>            
+                                                       
                                             <!--status typed part-->
-                                            <div class="chat-typed"><i class="typicn-chat"></i> Jane smith is typing...</div>
+                                            <div class="chat-typed"><i class="typicn-chat"></i> </div>
                                             <!--input part-->
                                             <div class="chat-input">
-                                                <div class="chat-desc muted">Lorem ipsum dolor sit amet.</div>
-                                                <textarea class="input-block-level" placeholder="chat here..."></textarea>
+                                                <div class="chat-desc muted">Insira a mensagem.</div>
+                                                <textarea class="input-block-level" placeholder=""></textarea>
                                             </div>
                                         </div>
                                         <div class="divider-content"><span></span></div>
@@ -568,71 +550,14 @@
                                     </div><!--/contact-->
 
                                     <!--alternative 1-->
-                                    <div class="tab-pane fade" id="alt1">
-                                        <div class="divider-content"><span></span></div> <!--divider-->
-
-                                        <button class="btn btn-block btn-mini btn-primary">Add Action</button>
-                                        <button class="btn btn-block btn-mini">Add Action</button>
-
-                                        <div class="divider-content"><span></span></div> <!--divider-->
-
-                                        <!-- side-task -->
-                                        <div class="side-task">
-                                            <div class="task active">
-                                                <span class="task-header">
-                                                    <img src="/administrator/img/loader_16.gif" /> 
-                                                    <strong>Portofolio_W34GF.zip</strong>
-                                                </span>
-                                                <span class="task-desc">9.1 of 17MB - 243KB/sec - 1 min</span>
-                                                <div class="progress progress-striped active" rel="tooltip" title="40%">
-                                                    <div class="bar bar-success" style="width: 40%;"></div>
-                                                </div>
-                                            </div>
-                                            <div class="task fade in">
-                                                <i class="icofont-ok-sign color-green" title="success"></i>
-                                                <span class="task-desc">Paralax_bg_5448.jpg</span>
-                                                <button data-dismiss="alert" class="close">&times;</button>
-                                            </div>
-                                            <div class="task fade in">
-                                                <i class="icofont-ok-sign color-green" title="success"></i>
-                                                <span class="task-desc">Widget_sidebar_W0089.psd</span>
-                                                <button data-dismiss="alert" class="close">&times;</button>
-                                            </div>
-                                            <div class="task fade in">
-                                                <i class="icofont-remove-sign color-red" title="failed"></i>
-                                                <span class="task-desc">Widget_sidebar_W0089.psd</span>
-                                                <button data-dismiss="alert" class="close">&times;</button>
-                                            </div>
-                                            <div class="task fade in">
-                                                <i class="typicn-loop color-silver-dark" title="cancel"></i>
-                                                <span class="task-desc">Widget_sidebar_W0089.psd</span>
-                                                <button data-dismiss="alert" class="close">&times;</button>
-                                            </div>
-                                            <div class="task fade in">
-                                                <i class="typicn-loop color-silver-dark" title="cancel"></i>
-                                                <span class="task-desc">Widget_sidebar_W0089.psd</span>
-                                                <button data-dismiss="alert" class="close">&times;</button>
-                                            </div>
-                                            <div class="task fade in">
-                                                <i class="icofont-ok-sign color-green" title="success"></i>
-                                                <span class="task-desc">Icons_bg_I98GH.jpg</span>
-                                                <button data-dismiss="alert" class="close">&times;</button>
-                                            </div>
-                                            <div class="task fade in">
-                                                <i class="icofont-remove-sign color-red" title="failed"></i>
-                                                <span class="task-desc">Dashboard_3805.jpg</span>
-                                                <button data-dismiss="alert" class="close">&times;</button>
-                                            </div>
-                                        </div><!-- /side-task -->
-
-                                        <div class="divider-content"><span></span></div> <!--divider-->
-
-                                    </div><!--/alternative 1-->
+                                   
 
                                 </div>
                             </div><!-- /sidebar-right-content -->
                         </div><!-- /sidebar-right -->
+                        
                     </aside><!-- /side-right -->
+                    
                 </div><!-- /span side-right -->
             </div>
         </section>
